--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'France -- History -- Louis XIV, 1643-1715 -- Fiction'
 - !lcc 'PQ'
+- GITenberg
 title: Vingt ans après
 url: http://www.gutenberg.org/ebooks/13952
